--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-l font-bold;
+  }
+  h2 {
+    @apply text-l font-medium;
+  }
+  p {
+    @apply text-m font-normal;
+  }
+}
