--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,21 @@
 
 @layer base {
   h1 {
-    @apply text-l font-bold;
+    @apply text-l font-bold text-red50;
   }
   h2 {
-    @apply text-l font-medium;
+    @apply text-l font-medium text-red50;
   }
   p {
-    @apply text-m font-normal;
+    @apply text-m font-normal text-red50;
   }
+}
+
+html, body, #root {
+  height: 100%;
+  height: -webkit-fill-available;
+}
+
+html { 
+  background-color: #0D0404; 
 }
